Fix home page nav menu in landscape mode on mobile

--- a/src/site/AppComponent.css
+++ b/src/site/AppComponent.css
@@ -265,3 +265,11 @@ footer .text {
     clear: left;
   }
 }
+
+@media (max-height: 370px) {
+  .content.home app-link,
+  .content.home a {
+    display: inline-block;
+    margin: 0 5px;
+  }
+}
